crates/compiler/src/tests/e2e/bad/0030_constructor_extra_args_bar/main.gom
package main;

enum Foo {
    Bar(int32, int32, int32),
}

fn main() {
    let x = Foo::Bar(1, 2, 3);
    match x {
        Foo::Bar(a, b, _c) => string_println(int32_to_string(a + b)),
    };
}
